Increase Button Font Weight To Fix Contrast Issue

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ button {
   order: 3;
   border: 0;
   border-radius: 5px;
+  font-weight: bold;
 }
 
 button:focus {
